--- a/appsettings.json
+++ b/appsettings.json
@@ -6,5 +6,7 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "CircuitOptions.DetailedErrors": true,
+  "DetailedErrors": true
 }
